# SwagHLC

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: demo_multi_device.yaml  demo_single_model.yaml  integration_customresnet.yaml  multimodal_fusion.yaml
scripts/: bench_latency.py  plot_streams.py
src/swag_hlc/: __init__.py  activities.py  app.py  config.py  dataset_info.py  modalities.py
src/swag_hlc/dummy_stream/: __init__.py  base_source.py  rrd_index.py  rrd_replay_source.py  synthetic_source.py
src/swag_hlc/messages/: __init__.py  schema.py
src/swag_hlc/realtime/: __init__.py  buffers.py  engine.py  features.py  fusion.py  smoothing.py
src/swag_hlc/realtime/models/: __init__.py  base.py  registry.py  stub.py  torch_model.py
src/swag_hlc/transport/: __init__.py  base.py  inproc.py  ros2.py
tests/: test_pipeline.py
